fastmetrics-derive/tests/ui/fail/label_index_mapping/tuple_struct_input.rs
use fastmetrics_derive::LabelIndexMapping;

#[derive(LabelIndexMapping)]
struct TupleStruct(bool);

fn main() {}
